VisualBasic/src/VB6/VisualBasic6Parser.java
// Generated from C:/Users/creimann/IdeaProjects/VisualBasicGrammar/VisualBasic/src\VisualBasic6.g4 by ANTLR 4.5
package VB6;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VisualBasic6Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, STRING_LITERAL=3, FLOAT_LITERAL=4, INTEGER_LITERAL=5, 
		DATE_LITERAL=6, FALSE=7, TRUE=8, NOTHING=9, OPTION=10, EXPLICIT=11, STRICT=12, 
		ATTRIBUTE=13, VERSION=14, CLASS=15, BEGIN=16, BEGINPROPERTY=17, ENDPROPERTY=18, 
		PUBLIC=19, PRIVATE=20, FRIEND=21, FUNCTION=22, GET=23, LET=24, PROPERTY=25, 
		SET=26, SUB=27, BOOLEAN=28, BYTE=29, CURRENCY=30, DATE=31, DECIMAL=32, 
		DOUBLE=33, INTEGER=34, LONG=35, OBJECT=36, SINGLE=37, STRING=38, VARIANT=39, 
		CALL=40, CASE=41, DO=42, EACH=43, ELSE=44, ELSEIF=45, END=46, EXIT=47, 
		FOR=48, GOTO=49, GOTO_ZERO=50, IF=51, IN=52, LOOP=53, NEXT=54, ON_ERROR=55, 
		RESUME_NEXT=56, SELECT=57, THEN=58, TO=59, UNTIL=60, WEND=61, WHILE=62, 
		WITH=63, AS=64, ALIAS=65, BYREF=66, BYVAL=67, CONST=68, DECLARE=69, DIM=70, 
		ENUM=71, EVENT=72, WITHEVENTS=73, LIB=74, ME=75, NEW=76, OPTIONAL=77, 
		PARAMARRAY=78, TYPE=79, TYPEOF=80, AMP=81, AND=82, DIV=83, INTDIV=84, 
		EQ=85, EXP=86, GT=87, GTE=88, IS=89, LIKE=90, LT=91, LTE=92, MINUS=93, 
		MOD=94, MUL=95, NEQ=96, NOT=97, OR=98, PARAM_TAG=99, PLUS=100, LPAREN=101, 
		RPAREN=102, LBRACE=103, RBRACE=104, LBRACK=105, RBRACK=106, COMMA=107, 
		DOT=108, COLON=109, ID=110, NL=111, CONT=112, WS=113, COMMENT=114;
	public static final int
		RULE_colonOrNL = 0, RULE_identifier = 1, RULE_typeCharacter = 2, RULE_asArray = 3, 
		RULE_propertyAccess = 4, RULE_assignTarget = 5, RULE_visibility = 6, RULE_type = 7, 
		RULE_builtinType = 8, RULE_expression = 9, RULE_callArguments = 10, RULE_arguments = 11, 
		RULE_positionalArguments = 12, RULE_namedArguments = 13, RULE_tag = 14, 
		RULE_atom = 15, RULE_literal = 16, RULE_floatLiteral = 17, RULE_integerLiteral = 18, 
		RULE_newExpr = 19, RULE_block = 20, RULE_line = 21, RULE_label = 22, RULE_statements = 23, 
		RULE_statement = 24, RULE_assignmentStmt = 25, RULE_conditionalStmt = 26, 
		RULE_ifStatement = 27, RULE_ifBlock = 28, RULE_ifClause = 29, RULE_elseIfClause = 30, 
		RULE_elseClause = 31, RULE_endIfClause = 32, RULE_declarationStmt = 33, 
		RULE_errorStmt = 34, RULE_exitStmt = 35, RULE_gotoStmt = 36, RULE_invocationStmt = 37, 
		RULE_loopStmt = 38, RULE_doWhileLoop = 39, RULE_forLoop = 40, RULE_whileLoop = 41, 
		RULE_selectStmt = 42, RULE_caseStmt = 43, RULE_caseClause = 44, RULE_caseElseStmt = 45, 
		RULE_withStmt = 46, RULE_memberDeclaration = 47, RULE_attributes = 48, 
		RULE_attribute = 49, RULE_enumDeclaration = 50, RULE_enumField = 51, RULE_eventDeclaration = 52, 
		RULE_externalDeclaration = 53, RULE_methodDeclaration = 54, RULE_subDeclaration = 55, 
		RULE_functionDeclaration = 56, RULE_parameterList = 57, RULE_parameters = 58, 
		RULE_parameter = 59, RULE_parameterModifier = 60, RULE_propertyDeclaration = 61, 
		RULE_typeDeclaration = 62, RULE_typeField = 63, RULE_variableDeclaration = 64, 
		RULE_file = 65, RULE_header = 66, RULE_hdrAttributeStatement = 67, RULE_hdrPropertyBlock = 68, 
		RULE_hdrProperty = 69, RULE_hdrComplexProperty = 70, RULE_hdrVersionStatement = 71, 
		RULE_optionStatement = 72;
	public static final String[] ruleNames = {
		"colonOrNL", "identifier", "typeCharacter", "asArray", "propertyAccess", 
		"assignTarget", "visibility", "type", "builtinType", "expression", "callArguments", 
		"arguments", "positionalArguments", "namedArguments", "tag", "atom", "literal", 
		"floatLiteral", "integerLiteral", "newExpr", "block", "line", "label", 
		"statements", "statement", "assignmentStmt", "conditionalStmt", "ifStatement", 
		"ifBlock", "ifClause", "elseIfClause", "elseClause", "endIfClause", "declarationStmt", 
		"errorStmt", "exitStmt", "gotoStmt", "invocationStmt", "loopStmt", "doWhileLoop", 
		"forLoop", "whileLoop", "selectStmt", "caseStmt", "caseClause", "caseElseStmt", 
		"withStmt", "memberDeclaration", "attributes", "attribute", "enumDeclaration", 
		"enumField", "eventDeclaration", "externalDeclaration", "methodDeclaration", 
		"subDeclaration", "functionDeclaration", "parameterList", "parameters", 
		"parameter", "parameterModifier", "propertyDeclaration", "typeDeclaration", 
		"typeField", "variableDeclaration", "file", "header", "hdrAttributeStatement", 
		"hdrPropertyBlock", "hdrProperty", "hdrComplexProperty", "hdrVersionStatement", 
		"optionStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'$'", "';'", null, null, null, null, "'False'", "'True'", "'Nothing'", 
		"'Option'", "'Explicit'", "'Strict'", "'Attribute'", "'VERSION'", "'CLASS'", 
		null, "'BeginProperty'", "'EndProperty'", "'Public'", "'Private'", "'Friend'", 
		"'Function'", "'Get'", "'Let'", "'Property'", "'Set'", "'Sub'", "'Boolean'", 
		"'Byte'", "'Currency'", "'Date'", "'Decimal'", "'Double'", "'Integer'", 
		"'Long'", "'Object'", "'Single'", "'String'", "'Variant'", "'Call'", "'Case'", 
		"'Do'", "'Each'", "'Else'", "'ElseIf'", null, "'Exit'", "'For'", "'GoTo'", 
		"'GoTo 0'", "'If'", "'In'", "'Loop'", "'Next'", "'On Error'", "'Resume Next'", 
		"'Select'", "'Then'", "'To'", "'Until'", "'Wend'", "'While'", "'With'", 
		"'As'", "'Alias'", "'ByRef'", "'ByVal'", "'Const'", "'Declare'", "'Dim'", 
		"'Enum'", "'Event'", "'WithEvents'", "'Lib'", "'Me'", "'New'", "'Optional'", 
		"'ParamArray'", "'Type'", "'TypeOf'", "'&'", "'And'", "'/'", "'\\'", "'='", 
		"'^'", "'>'", "'>='", "'Is'", "'Like'", "'<'", "'<='", "'-'", "'Mod'", 
		"'*'", "'<>'", "'Not'", "'Or'", "':='", "'+'", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "','", "'.'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "STRING_LITERAL", "FLOAT_LITERAL", "INTEGER_LITERAL", 
		"DATE_LITERAL", "FALSE", "TRUE", "NOTHING", "OPTION", "EXPLICIT", "STRICT", 
		"ATTRIBUTE", "VERSION", "CLASS", "BEGIN", "BEGINPROPERTY", "ENDPROPERTY", 
		"PUBLIC", "PRIVATE", "FRIEND", "FUNCTION", "GET", "LET", "PROPERTY", "SET", 
		"SUB", "BOOLEAN", "BYTE", "CURRENCY", "DATE", "DECIMAL", "DOUBLE", "INTEGER", 
		"LONG", "OBJECT", "SINGLE", "STRING", "VARIANT", "CALL", "CASE", "DO", 
		"EACH", "ELSE", "ELSEIF", "END", "EXIT", "FOR", "GOTO", "GOTO_ZERO", "IF", 
		"IN", "LOOP", "NEXT", "ON_ERROR", "RESUME_NEXT", "SELECT", "THEN", "TO", 
		"UNTIL", "WEND", "WHILE", "WITH", "AS", "ALIAS", "BYREF", "BYVAL", "CONST", 
		"DECLARE", "DIM", "ENUM", "EVENT", "WITHEVENTS", "LIB", "ME", "NEW", "OPTIONAL", 
		"PARAMARRAY", "TYPE", "TYPEOF", "AMP", "AND", "DIV", "INTDIV", "EQ", "EXP", 
		"GT", "GTE", "IS", "LIKE", "LT", "LTE", "MINUS", "MOD", "MUL", "NEQ", 
		"NOT", "OR", "PARAM_TAG", "PLUS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACK", "RBRACK", "COMMA", "DOT", "COLON", "ID", "NL", "CONT", "WS", 
		"COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VisualBasic6.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VisualBasic6Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ColonOrNLContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(VisualBasic6Parser.NL, 0); }
		public TerminalNode COLON() { return getToken(VisualBasic6Parser.COLON, 0); }
		public ColonOrNLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colonOrNL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterColonOrNL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitColonOrNL(this);
		}
	}

	public final ColonOrNLContext colonOrNL() throws RecognitionException {
		ColonOrNLContext _localctx = new ColonOrNLContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_colonOrNL);
		int _la;
		try {
			setState(151);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(146); 
					match(COLON);
					}
				}

				setState(149); 
				match(NL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150); 
				match(COLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(VisualBasic6Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(VisualBasic6Parser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(VisualBasic6Parser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(VisualBasic6Parser.DOT, i);
		}
		public TypeCharacterContext typeCharacter() {
			return getRuleContext(TypeCharacterContext.class,0);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(153); 
					match(ID);
					setState(154); 
					match(DOT);
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(160); 
			match(ID);
			setState(162);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(161); 
				typeCharacter();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeCharacterContext extends ParserRuleContext {
		public TypeCharacterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeCharacter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterTypeCharacter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitTypeCharacter(this);
		}
	}

	public final TypeCharacterContext typeCharacter() throws RecognitionException {
		TypeCharacterContext _localctx = new TypeCharacterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeCharacter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); 
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsArrayContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(VisualBasic6Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(VisualBasic6Parser.RPAREN, 0); }
		public List<IntegerLiteralContext> integerLiteral() {
			return getRuleContexts(IntegerLiteralContext.class);
		}
		public IntegerLiteralContext integerLiteral(int i) {
			return getRuleContext(IntegerLiteralContext.class,i);
		}
		public TerminalNode TO() { return getToken(VisualBasic6Parser.TO, 0); }
		public AsArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asArray; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterAsArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitAsArray(this);
		}
	}

	public final AsArrayContext asArray() throws RecognitionException {
		AsArrayContext _localctx = new AsArrayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asArray);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); 
			match(LPAREN);
			setState(172);
			_la = _input.LA(1);
			if (_la==INTEGER_LITERAL || _la==MINUS || _la==PLUS) {
				{
				setState(167); 
				integerLiteral();
				setState(170);
				_la = _input.LA(1);
				if (_la==TO) {
					{
					setState(168); 
					match(TO);
					setState(169); 
					integerLiteral();
					}
				}

				}
			}

			setState(174); 
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyAccessContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(VisualBasic6Parser.DOT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public PropertyAccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyAccess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterPropertyAccess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitPropertyAccess(this);
		}
	}

	public final PropertyAccessContext propertyAccess() throws RecognitionException {
		PropertyAccessContext _localctx = new PropertyAccessContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_propertyAccess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176); 
			match(DOT);
			setState(177); 
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignTargetContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public PropertyAccessContext propertyAccess() {
			return getRuleContext(PropertyAccessContext.class,0);
		}
		public AssignTargetContext assignTarget() {
			return getRuleContext(AssignTargetContext.class,0);
		}
		public CallArgumentsContext callArguments() {
			return getRuleContext(CallArgumentsContext.class,0);
		}
		public AssignTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterAssignTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitAssignTarget(this);
		}
	}

	public final AssignTargetContext assignTarget() throws RecognitionException {
		return assignTarget(0);
	}

	private AssignTargetContext assignTarget(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AssignTargetContext _localctx = new AssignTargetContext(_ctx, _parentState);
		AssignTargetContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_assignTarget, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(180); 
				identifier();
				}
				break;
			case DOT:
				{
				setState(181); 
				propertyAccess();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(190);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(188);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new AssignTargetContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assignTarget);
						setState(184);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(185); 
						callArguments();
						}
						break;
					case 2:
						{
						_localctx = new AssignTargetContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assignTarget);
						setState(186);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(187); 
						propertyAccess();
						}
						break;
					}
					} 
				}
				setState(192);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VisibilityContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(VisualBasic6Parser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(VisualBasic6Parser.PRIVATE, 0); }
		public TerminalNode FRIEND() { return getToken(VisualBasic6Parser.FRIEND, 0); }
		public VisibilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibility; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).enterVisibility(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VisualBasic6Listener ) ((VisualBasic6Listener)listener).exitVisibility(this);
		}
	}

	public final VisibilityContext visibility() throws RecognitionException {
		VisibilityContext _localctx = new VisibilityContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_visibility);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << FRIEND))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
